@@ -1,8 +1,9 @@
-2014-03-21 Added command isAttempted to Image Gap module
+2014-03-25 Fixed problem with reset and set state in Submit module
 2014-03-24 "Return first score" flag modifies how the score is presented to the user
 2014-03-24 New module Submit, which acts like a Check module, but checks results only when all modules are in attempted state
 2014-03-24 Added handling custom events in the Advanced Connector
 2014-03-24 Added custom event to event bus
+2014-03-21 Added command isAttempted to Image Gap module
 2014-03-21 Added new text properties to check button
 2014-03-21 Added checkAnswers and uncheckAnswers method to Player API
 2014-03-21 Added command isAttempted to Text module
